--- a/src/CSS/currencyTracker.scss
+++ b/src/CSS/currencyTracker.scss
@@ -1,4 +1,4 @@
-.card{
+.tracker-card{
   border-radius: 1rem;
   border: 1px solid transparent;
   box-shadow: 0 7px 14px 0 rgba(65, 69, 88, 0.1), 0 3px 6px 0 rgba(0, 0, 0, 0.07);
@@ -8,7 +8,7 @@
     background-color: #fff;
   }
 
-  .card-body{
+  .tracker-card-body{
     padding: 1.5rem;
     .head-sort-buttons > th > button{
       border: none;
