--- a/src/CSS/sidebar.scss
+++ b/src/CSS/sidebar.scss
@@ -3,6 +3,13 @@
   border: 1px solid transparent;
   box-shadow: 0 7px 14px 0 rgba(65, 69, 88, 0.1), 0 3px 6px 0 rgba(0, 0, 0, 0.07);
   background-color: #fff;
+
+  img{
+    position: relative;
+    transform: translateY(100%) translateX(23%);
+    width: 70%;
+  }
+
   .li{
     cursor: pointer;
   }
